@@ -65,8 +65,10 @@ Do not edit this file directly.
       ls = 24;                      \
     } else if (utc_rd >= 734685 && utc_rd < 735780) {  \
       ls = 25;                      \
+    } else if (utc_rd >= 735780 && utc_rd < 736330) {  \
+      ls = 26;                      \
     } else {                         \
-      ls = 26;       \
+      ls = 27;       \
     }                              \
   }                                \
 }
@@ -102,6 +104,7 @@ Do not edit this file directly.
       case 733407: es = 1; break;            \
       case 734684: es = 1; break;            \
       case 735779: es = 1; break;            \
+      case 736329: es = 1; break;            \
     }                                  \
   }                                    \
 }
@@ -137,6 +140,7 @@ Do not edit this file directly.
       case 733407: dl = 86400 + 1; break;    \
       case 734684: dl = 86400 + 1; break;    \
       case 735779: dl = 86400 + 1; break;    \
+      case 736329: dl = 86400 + 1; break;    \
     }                                  \
   }                                    \
 }
